maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:25: error: type List takes type parameters
  def nexts(i:Int):List ={
                   ^ShortestPathMaze:25: error: type List takes type parameters
  def nexts(i:Int):List ={
                   ^ShortestPathMaze:26: error: type List takes type parameters
    var next:List = List.nil
             ^ShortestPathMaze:26: error: type List takes type parameters
    var next:List = List.nil
             ^ShortestPathMaze:26: error: value nil is not a member of object List
    var next:List = List.nil
                         ^ShortestPathMaze:47: error: type List takes type parameters
  var nextCase:List=List.nil
               ^ShortestPathMaze:47: error: type List takes type parameters
  var nextCase:List=List.nil
               ^ShortestPathMaze:47: error: value nil is not a member of object List
  var nextCase:List=List.nil
                         ^